<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_history"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="2"
            android:fadeScrollbars="false"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/txt_display"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:fadeScrollbars="false"
            android:hint="@string/btn0"
            android:scrollbars="vertical"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <TableRow

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_clear_all"

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_clear_all"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="30sp"
                app:backgroundTint="@android:color/darker_gray"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_clear_current"

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_clear_current"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="30sp"
                app:backgroundTint="@android:color/darker_gray"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_backspace"

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_backspace"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="30sp"
                app:backgroundTint="@android:color/darker_gray"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_divide"

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_divide"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="30sp"
                app:backgroundTint="@android:color/darker_gray"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toTopOf="parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn7"

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn7"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:backgroundTint="@android:color/darker_gray"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn8"

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn8"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:backgroundTint="@android:color/darker_gray"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn9"

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn9"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:backgroundTint="@android:color/darker_gray"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_multiply"

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_multiply"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="30sp"
                app:backgroundTint="@android:color/darker_gray"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toTopOf="parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn4"

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn4"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:backgroundTint="@android:color/darker_gray"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn5"

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn5"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:backgroundTint="@android:color/darker_gray"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn6"

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn6"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:backgroundTint="@android:color/darker_gray"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_minus"

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_minus"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="30sp"
                app:backgroundTint="@android:color/darker_gray"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toTopOf="parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn1"

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn1"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:backgroundTint="@android:color/darker_gray"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn2"

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn2"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:backgroundTint="@android:color/darker_gray"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn3"

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn3"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:backgroundTint="@android:color/darker_gray"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_plus"

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_plus"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="30sp"
                app:backgroundTint="@android:color/darker_gray"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toTopOf="parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_change_sign"

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_change_sign"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:backgroundTint="@android:color/darker_gray"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn0"

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn0"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:backgroundTint="@android:color/darker_gray"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_dot"

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_dot"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:backgroundTint="@android:color/darker_gray"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_equals"

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_equals"
                android:textColor="@color/design_default_color_background"
                android:textSize="30sp"
                app:backgroundTint="@android:color/holo_green_dark"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toTopOf="parent" />
        </TableRow>
    </TableLayout>

</LinearLayout>

